presets no longer overlap, made all presets a global variable

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -220,3 +220,10 @@ ul#menu li {
   height: 80px;
   width: 75px;
 }
+
+tone-example {
+  display: flex;
+  position: relative;
+  top: 50px;
+  height: 50px;
+}
